@@ -19,8 +19,10 @@ gcl (2.6.5-1) unstable; urgency=high
   * New upstream release
   * Proper binutils dependency for Debian
   * head -1l -> head -n 1 for freebsd
+  * Cleanup gmp_wrapper code, check for in-place calls as write in one
+    step is not guaranteed in gmp according to its developers
 
- -- Camm Maguire <camm@enhanced.com>  Fri, 13 Aug 2004 16:14:53 +0000
+ -- Camm Maguire <camm@enhanced.com>  Mon, 16 Aug 2004 17:26:57 +0000
 
 gcl (2.6.4-1) unstable; urgency=high
 
